--- a/web1/src/app/inventory/product-transfer/product-transfer.component.html
+++ b/web1/src/app/inventory/product-transfer/product-transfer.component.html
@@ -252,7 +252,7 @@
                                                 </tr>
                                             </thead>
                                             <tbody class="text-center">
-                                                <tr *ngFor="let data of xferList ; let i = index;">
+                                                <tr *ngFor="let data of xferList ; let i = index;" style="white-space: nowrap;">
                                                     <td>{{ i + 1 }}</td>
                                                     <td>{{data.ProductName}}</td>
                                                     <td>{{data.BarCode}}</td>
