--- a/server/assest/TransferProduct.css
+++ b/server/assest/TransferProduct.css
@@ -49,10 +49,10 @@ table thead tr th{
 }
 
 table tbody tr{
-    height: 25px; white-space: nowrap; font-size: 12px;
+    height: 25px; font-size: 12px;
 }
 
-table tbody tr th{
+table tbody tr td{
     padding: 5px !important;
 }
 
