--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -65,7 +65,7 @@
                                                 </mat-form-field>
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
-                                                <!-- <mat-form-field class="example-full-width mb-0">
+                                                <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Employee Name</mat-label>
                                                     <mat-select name="Employee" [(ngModel)]="BillMaster.EmployeeID"
                                                         #Employeecontrol>
@@ -76,8 +76,8 @@
                                                         </mat-option>
                                                     </mat-select>
                                                     <mat-error>Name is required</mat-error>
-                                                </mat-form-field> -->
-                                                <mat-form-field class="example-full-width">
+                                                </mat-form-field>
+                                                <!-- <mat-form-field class="example-full-width">
                                                     <mat-label>Employee Name</mat-label>
                                                     <input type="text" placeholder="serach employee" aria-label="Text" matInput
                                                     name="EmployeeID"  [formControl]="myControl" [matAutocomplete]="auto2"
@@ -88,7 +88,7 @@
                                                         {{option2.Name}} {{option2.MobileNo1}}
                                                       </mat-option>
                                                     </mat-autocomplete>
-                                                  </mat-form-field>
+                                                  </mat-form-field> -->
                                             </div>
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                                     <mat-form-field class="example-full-width">
