--- a/web1/src/app/report/old-sale/old-sale.component.html
+++ b/web1/src/app/report/old-sale/old-sale.component.html
@@ -267,8 +267,12 @@
                                                 <mat-select name="FieldType"
                                                     [(ngModel)]="Billdetail.ProductCategory"
                                                     (selectionChange)="getFieldList()" required #Typecontrol>
+                                                    <mat-option>
+                                                        <ngx-mat-select-search matInput [(ngModel)]="searchValue" (ngModelChange)="searchValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                        </ngx-mat-select-search>
+                                                    </mat-option>
                                                     <mat-option [value]=0>All</mat-option>
-                                                    <mat-option *ngFor="let prod of prodList   let i = index;"
+                                                    <mat-option *ngFor="let prod of prodList | prodtypename: searchValue   let i = index;"
                                                         [value]="prod.ID">
                                                         {{prod.Name | uppercase}}
                                                     </mat-option>
@@ -289,8 +293,12 @@
                                                         (selectionChange)="getFieldSupportData(i)" editable="true"
                                                         [required]="spec.Required === 1" #singleSelect>
                                                         <mat-option>
+                                                            <ngx-mat-select-search matInput [(ngModel)]="spec.EnteredValue" (ngModelChange)="spec.EnteredValue = onChange($event)" [ngModelOptions]="{standalone: true}">
+                                                            </ngx-mat-select-search>
                                                         </mat-option>
-                                                        <mat-option *ngFor="let val of spec.SptFilterData"
+                                                        <mat-option>
+                                                        </mat-option>
+                                                        <mat-option *ngFor="let val of spec.SptFilterData | productitemfilter: spec.EnteredValue"
                                                             [value]="val.TableValue">
                                                             {{val.TableValue}}
                                                         </mat-option>
