--- a/server/views/header.ejs
+++ b/server/views/header.ejs
@@ -13,7 +13,9 @@
     <% if (data.billformate.BillHeader==3){%>
         <header class="headerSize" <% %> style='width:<%= data.HeaderWidth %>; height: <%= data.HeaderHeight %>;'>
             <div class="row" style="text-align: left;">
-                <p style="font-size: 15px; margin: 0; padding: 0;"> <%=data.shopdetails.GSTNo%></p>
+                <% if (data.bill != "Cash Memo"){%>
+                    <p style="font-size: 15px; margin: 0; padding: 0;"> <%=data.shopdetails.GSTNo%></p>
+                    <%}%>
             </div>
                     <div class="row">
                         <div class="col1" <% %> style="text-align: <%= data.ImageAlign %>;">
