--- a/web1/src/app/common/common.component.html
+++ b/web1/src/app/common/common.component.html
@@ -157,7 +157,7 @@
               <a *ngIf="viewFlag.viewProductTransferReport" href="javascript:void(0)" [routerLink]="['/report/product-transfer']" id="collapseExample7">Product Transfer</a>
               <a *ngIf="viewFlag.viewProductReturnReport" href="javascript:void(0)" [routerLink]="['/report/product-return']" id="collapseExample7">Product Return</a>
               <a *ngIf="viewFlag.viewEyeTestReport" href="javascript:void(0)" [routerLink]="['/report/supplierCredit']" id="collapseExample7">Supplier Credit</a>
-              <a *ngIf="viewFlag.viewEyeTestReport" href="javascript:void(0)" (click)="ComingSoon()"  id="collapseExample7">Eye Test</a>
+              <a *ngIf="viewFlag.viewEyeTestReport" href="javascript:void(0)" [routerLink]="['/report/eyetest']"  id="collapseExample7">Eye Test</a>
               <a *ngIf="viewFlag.viewEyeTestReport" href="javascript:void(0)" (click)="ComingSoon()"  id="collapseExample7">Loyalty </a>
               <a *ngIf="viewFlag.viewEyeTestReport" href="javascript:void(0)" [routerLink]="['/report/oldSale']" id="collapseExample7">Old Sale </a>
             </div>
