--- a/web1/src/app/report/eyetest-report/eyetest-report.component.html
+++ b/web1/src/app/report/eyetest-report/eyetest-report.component.html
@@ -12,7 +12,7 @@
                             </div>
                         </div>
                         <div class="body">
-                            <form class="p-3 pb-0" #f1="ngForm" >
+                            <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="searchData()">
                                 <div class="row">
                                     <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
                                         <mat-form-field class="example-full-width mb-0">
@@ -27,19 +27,21 @@
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>From</mat-label>
                                             <input matInput name="FromDate" type="date" [(ngModel)]="data.FromDate"
-                                                #DOBcontrol [disabled]="!editEyeTestReport"/>
+                                                #DOBcontrol [disabled]="!editEyeTestReport" />
                                         </mat-form-field>
                                     </div>
                                     <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>To</mat-label>
-                                            <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate" [disabled]="!editEyeTestReport"/>
+                                            <input matInput type="date" name="ToDate" [(ngModel)]="data.ToDate"
+                                                [disabled]="!editEyeTestReport" />
                                         </mat-form-field>
                                     </div>
                                     <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0">
-                                        <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup === 'CompanyAdmin'">
+                                        <mat-form-field class="example-full-width mb-0"
+                                            *ngIf="user.UserGroup === 'CompanyAdmin'">
                                             <mat-label>ShopName</mat-label>
-                                            <mat-select name="ShopID" [(ngModel)]="data.ShopID" multiple>
+                                            <mat-select name="ShopID" [(ngModel)]="data.ShopID">
                                                 <mat-option [value]=0>All</mat-option>
                                                 <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
                                                     <span [style.color]="'blue'"
@@ -47,9 +49,10 @@
                                                 </mat-option>
                                             </mat-select>
                                         </mat-form-field>
-                                        <mat-form-field class="example-full-width mb-0" *ngIf="user.UserGroup !== 'CompanyAdmin'">
+                                        <mat-form-field class="example-full-width mb-0"
+                                            *ngIf="user.UserGroup !== 'CompanyAdmin'">
                                             <mat-label>ShopName</mat-label>
-                                            <mat-select name="ShopID" [(ngModel)]="data.ShopID" >
+                                            <mat-select name="ShopID" [(ngModel)]="data.ShopID">
                                                 <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
                                                     <span [style.color]="'blue'"
                                                         *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
@@ -58,10 +61,37 @@
                                         </mat-form-field>
                                     </div>
                                     <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                                        <mat-form-field class="example-full-width mb-0">
+                                            <mat-label>Employee Name</mat-label>
+                                            <mat-select name="Employee" [(ngModel)]="data.EmployeeID" #Employeecontrol>
+                                                <mat-option value="All">All</mat-option>
+                                                <mat-option *ngFor="let el of employeeList let i = index;"
+                                                    [value]="el.ID">
+                                                    {{el.Name}}
+                                                </mat-option>
+                                            </mat-select>
+                                            <mat-error>Name is required</mat-error>
+                                        </mat-form-field>
+                                    </div>
+
+                                    <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
+                                        <mat-form-field class="example-full-width mb-0">
+                                            <mat-label>Cash Type</mat-label>
+                                            <mat-select name="Type" [(ngModel)]="data.Type" required>
+                                                <mat-option value="All">All</mat-option>
+                                                <mat-option value="spectacle_rx">spectacle_rx</mat-option>
+                                                <mat-option value="contact_lens_rx">contact_lens_rx</mat-option>
+                                            </mat-select>
+                                            <mat-error>
+                                                CashType is required
+                                            </mat-error>
+                                        </mat-form-field>
+                                    </div>
+                                    <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                         <button class="me-2" type="submit" mat-raised-button color="primary">
-                                             Search
+                                            Search
                                         </button>
-                                        <button type="button" mat-raised-button color="warn" >
+                                        <button type="button" mat-raised-button color="warn">
                                             Reset
                                         </button>
                                     </div>
@@ -74,6 +104,7 @@
                                         style="border: 2px solid #fff !important;" id="ProductTransferExcel">
                                         <thead>
                                             <tr style="white-space: nowrap;">
+                                                <th>Action</th>
                                                 <th>S.No</th>
                                                 <th>Customer Name</th>
                                                 <th>MobileNo</th>
@@ -86,7 +117,120 @@
                                             </tr>
                                         </thead>
                                         <tbody class="text-center">
-                                           
+                                            <tr class="text-center" *ngFor="let d of eyeList; let i = index"
+                                                text="left">
+                                                <td>
+                                                    <div class="button-container">
+                                                        <button class="bg-btn">
+                                                            <mat-icon class="edit_icon pt-1">remove_red_eye</mat-icon>
+                                                        </button>
+                                                        <div class="hover-box">
+                                                            <table id="table2" style="width: 100%;">
+                                                                <thead>
+                                                                    <tr>
+                                                                        <th colspan="1" style="border-bottom: 0px !important; "></th>
+                                                                        <th colspan="5">Right</th>
+                                                                        <th colspan="5">Left</th>
+                                                                    </tr>
+                                                                </thead>
+                                                                <tbody>
+                                                                    <tr>
+                                                                        <th style="border-top: 0px !important; "></th>
+                                                                        <th>SPH</th>
+                                                                        <th>CYL</th>
+                                                                        <th>AXIS</th>
+                                                                        <th>VP</th>
+                                                                        <th>R_ADD</th>
+                                                                        <th>SPH</th>
+                                                                        <th>CYL</th>
+                                                                        <th>AXIS</th>
+                                                                        <th>VP</th>
+                                                                        <th>L_ADD</th>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <th>Distance</th>
+                                                                        <td>
+                                                                            {{d.REDPSPH}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.REDPCYL}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.REDPAxis}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.REDPVA}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.R_Addition}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.LEDPSPH}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.LEDPCYL}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.LEDPAxis}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.LEDPVA}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.L_Addition}}
+                                                                        </td>
+                                                                    </tr>
+                                                                    <tr>
+                                                                        <th>Near</th>
+                                                                        <td>
+                                                                            {{d.RENPSPH}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.RENPCYL}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.RENPAxis}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.RENPVA}}
+                                                                        </td>
+                                                                        <td>
+                                                                            
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.LENPSPH}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.LENPCYL}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.LENPAxis}}
+                                                                        </td>
+                                                                        <td>
+                                                                            {{d.LENPVA}}
+                                                                        </td>
+                                                                        <td>
+                                                                            
+                                                                        </td>
+                                                                    </tr>
+                                                                </tbody>
+                                                            </table>
+                                                        </div>
+                                                    </div>
+                                                </td>
+
+
+                                                <td> {{ i+1 }} </td>
+                                                <td> {{ d.CustomerName }} </td>
+                                                <td> {{ d.MobileNo1 }} </td>
+                                                <td> {{ d.Family }} </td>
+                                                <td> {{ d.RefferedByDoc }} </td>
+                                                <td> {{ d.ShopName }} <span [style.color]="'blue'"
+                                                        *ngIf="d.AreaName !== 'null'">({{d.AreaName}})</span></td>
+                                                <td> {{ d.CreatedPerson}}
+                                                <td> {{ dateFormat(d.CreatedOn)}}
+                                                <td> {{ dateFormat(d.ExpiryDate)}}</td>
+                                            </tr>
                                         </tbody>
                                     </table>
                                 </div>
