--- a/web1/src/app/report/expense/expense.component.html
+++ b/web1/src/app/report/expense/expense.component.html
@@ -75,7 +75,7 @@
                                         <button class="me-2" type="submit" mat-raised-button color="primary">
                                              Search
                                         </button>
-                                        <button type="button" mat-raised-button color="warn" >
+                                        <button type="button" mat-raised-button color="warn" (click)="FromReset()">
                                             Reset
                                         </button>
                                     </div>
