--- a/web1/src/app/report/eyetest-report/eyetest-report.component.html
+++ b/web1/src/app/report/eyetest-report/eyetest-report.component.html
@@ -42,7 +42,7 @@
                                             *ngIf="user.UserGroup === 'CompanyAdmin'">
                                             <mat-label>ShopName</mat-label>
                                             <mat-select name="ShopID" [(ngModel)]="data.ShopID">
-                                                <mat-option [value]=0>All</mat-option>
+                                                <mat-option value="All">All</mat-option>
                                                 <mat-option [value]="Ts.ID" *ngFor="let Ts of shopList"> {{Ts.Name}}
                                                     <span [style.color]="'blue'"
                                                         *ngIf="Ts.AreaName !== 'null'">({{Ts.AreaName}})</span>
@@ -76,7 +76,7 @@
 
                                     <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                         <mat-form-field class="example-full-width mb-0">
-                                            <mat-label>Cash Type</mat-label>
+                                            <mat-label>Lens Type</mat-label>
                                             <mat-select name="Type" [(ngModel)]="data.Type" required>
                                                 <mat-option value="All">All</mat-option>
                                                 <mat-option value="spectacle_rx">spectacle_rx</mat-option>
@@ -88,10 +88,10 @@
                                         </mat-form-field>
                                     </div>
                                     <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
-                                        <button class="me-2" type="submit" mat-raised-button color="primary">
+                                        <button [disabled]="!f1.valid" class="me-2" type="submit" mat-raised-button color="primary">
                                             Search
                                         </button>
-                                        <button type="button" mat-raised-button color="warn">
+                                        <button type="button" mat-raised-button color="warn" (click)="FromReset()">
                                             Reset
                                         </button>
                                     </div>
