--- a/web1/src/app/sale/bill/bill.component.html
+++ b/web1/src/app/sale/bill/bill.component.html
@@ -604,9 +604,9 @@
                                 </td>
                                 <td>{{i+1}}</td>
                                 <td style="white-space: nowrap;">
-                                    <button class="bgRemove">
+                                    <button class="bgRemove" type="button">
 
-                                        <button class="bgRemove p-0"
+                                        <button class="bgRemove p-0" type="button"
                                             *ngIf="deleteCustomerBill && data.ID == null || data.ID !== null &&  data.CancelStatus === 1"
                                             [disabled]="data.Status === 0 " (click)="deleteItem('Product', i)">
                                             <mat-icon class="deletes_icon " title="Delete">delete_forever</mat-icon>
@@ -614,23 +614,23 @@
 
                                         <button
                                             *ngIf="data.ID != null && data.Status === 0  && data.CancelStatus === 0 || (data.Status === 1  && data.CancelStatus === 1)"
-                                            class="bgRemove p-0 ms-1"
+                                            class="bgRemove p-0 ms-1"  type="button"
                                             [disabled]="data.CancelStatus === 0 || data.Status === 0"
                                             (click)="cancelProduct('Product', i)">
                                             <mat-icon class="deletes_icon  " title="Cancel">cancel</mat-icon>
                                         </button>
 
-                                        <button *ngIf="data.ID != null" class="bgRemove p-0 ms-1"
+                                        <button *ngIf="data.ID != null" class="bgRemove p-0 ms-1"  type="button"
                                             (click)="OrderPrint(data)">
                                             <mat-icon class="pritn_icon  " title="Order Form">print</mat-icon>
                                         </button>
 
-                                        <mat-icon *ngIf="data.Status !== 0" class="edit_icon ms-1"
+                                        <mat-icon *ngIf="data.Status !== 0" class="edit_icon ms-1"  type="button"
                                             (click)="openModal(content,data)">remove_red_eye</mat-icon>
                                         <mat-icon *ngIf="!data.UpdateProduct && editCustomerBill && data.Status !== 0"
                                             class="edit_icon1 ms-1" (click)="showInput(data)">edit
                                         </mat-icon>
-                                        <mat-icon class="edit_icon1 ms-1" (click)="showInput(data)"
+                                        <mat-icon class="edit_icon1 ms-1" (click)="showInput(data)"  
                                             *ngIf="data.UpdateProduct" (click)="updataEditProdcut('', '', data)">save
                                         </mat-icon>
 
@@ -760,8 +760,8 @@
                                 <td [ngClass]="{'deleteClass': data.Status === 0, 'addClass': data.Status === 2 }"
                                     class="text-center">C{{i+1}}</td>
                                 <td>
-                                    <button class="bgRemove" *ngIf="data.Status !== 0 && deleteCustomerBill">
-                                        <mat-icon class="deletes_icon ms-1"
+                                    <button   type="button" class="bgRemove" *ngIf="data.Status !== 0 && deleteCustomerBill">
+                                        <mat-icon class="deletes_icon ms-1" 
                                             (click)="deleteItem('Service', i)">delete_forever</mat-icon>
                                     </button>
                                 </td>
